2010-06-08  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.IPhone.csproj: Remove Mono.Addins targets as
	  they seem to be broken.

2010-06-08  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.IPhone.csproj:
	* MonoDevelop.IPhone.addin.xml:
	* templates/IPhonePlist.xft.xml: Re-specialized the plist
	  template so categorization remains sane.

2010-06-07  Michael Hutchinson  <mhutchinson@novell.com>

	* templates/IPhoneViewController.xft.xml: Fix template.

2010-06-07  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.IPhone.csproj: Renamed a file.

	* IPhoneCodeBehind.cs:
	* CodeBehindGenerator.cs: Renamed generator. Track base class
	  API.

	* gtk-gui/gui.stetic: Flush refs.

	* IPhoneProject.cs:
	* IPhoneBuildExtension.cs: Cosmetic.

2010-06-07  Michael Hutchinson  <mhutchinson@novell.com>

	* CodeBehind.cs:
	* IPhoneProject.cs:
	* CodeBehindGenerator.cs:
	* IPhoneBuildExtension.cs:
	* MonoDevelop.IPhone.csproj: Move more sharable code from
	  MonoDevelop.IPhone to MonoDevelop.MacDev.

2010-06-06  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneBuildExtension.cs: Moved lots of re-usable code from
	  iphone build extension to new
	  MonoDevelop.MacDev.MacBuildUtilities class.

2010-06-05  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneProjectConfiguration.cs: Fix possible exception.

	* MonoDevelop.IPhone.csproj: Remove duplicate/nonexistent
	  folders.

2010-06-04  Michael Hutchinson  <mhutchinson@novell.com>

	* icons:
	* Icons:
	* templates:
	* Templates:
	* Icons/16x16:
	* icons/22x22:
	* icons/32x32:
	* Icons/22x22:
	* Icons/48x48:
	* Icons/32x32:
	* icons/48x48:
	* Icons/24x24:
	* icons/24x24:
	* icons/16x16:
	* PropertyList:
	* Icons/256x256:
	* icons/256x256:
	* CodeBehind.cs:
	* Orientation.cs:
	* IPhoneProject.cs:
	* InterfaceBuilder:
	* MobileProvision.cs:
	* Icons/mono-develop.svg:
	* icons/mono-develop.svg:
	* CodeBehindGenerator.cs:
	* IPhoneBuildExtension.cs:
	* PropertyList/PlistData.cs: